# Tesla_Authenticator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
init/: init-db.sh
migrations/00000000000000_create_users/: up.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/middleware/: mod.rs
src/services/: auth.rs
utils/: gen_hash.rs
