[package]
name = "tesla_authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
bcrypt = "0.13"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36", features = ["macros", "signal"] }
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
futures-util = "0.3.31"
tracing-actix-web = "0.7.16"

[dev-dependencies]
diesel_migrations = "2.0"
